<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.dkaminski</groupId>
    <artifactId>parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <graalvm.version>23.1.2</graalvm.version>
        <jackson-bom.version>2.16.1</jackson-bom.version>
        <java.version>21</java.version>
        <lombok.version>1.18.30</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <maven.compiler.debug>false</maven.compiler.debug>
        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- https://stackoverflow.com/questions/75870282/is-snakeyaml-2-0-added-in-the-new-spring-boot-versions -->
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>spring-cloud-gcp-dependencies</artifactId>
                <version>5.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.flapdoodle.embed</groupId>
                <artifactId>de.flapdoodle.embed.mongo.spring31x</artifactId>
                <version>4.11.0</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit-assertj</artifactId>
                <version>3.2.4</version>
            </dependency>
            <dependency>
                <groupId>org.graalvm.polyglot</groupId>
                <artifactId>polyglot</artifactId>
                <version>${graalvm.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>org.graalvm.polyglot</groupId>
                <artifactId>js-isolate</artifactId>
                <version>${graalvm.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.graalvm.polyglot</groupId>
                <artifactId>inspect</artifactId>
                <version>${graalvm.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>0.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2023.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>base</module>
        <module>base-ui</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>7.2.0</version>
                    <configuration>
                        <generateApiDocumentation>false</generateApiDocumentation>
                        <generateApiTests>false</generateApiTests>
                        <generateModelDocumentation>false</generateModelDocumentation>
                        <generateModelTests>false</generateModelTests>
                        <generateSupportingFiles>true</generateSupportingFiles>
                        <modelNameSuffix>Dto</modelNameSuffix>
                        <output>${project.basedir}/src/gen</output>
                        <configOptions>
                            <annotationLibrary>none</annotationLibrary>
                            <delegatePattern>true</delegatePattern>
                            <documentationProvider>none</documentationProvider>
                            <hideGenerationTimestamp>true</hideGenerationTimestamp>
                            <openApiNullable>false</openApiNullable>
                            <sourceFolder>java</sourceFolder>
                            <sortParamsByRequiredFlag>false</sortParamsByRequiredFlag>
                            <useBeanValidation>true</useBeanValidation>
                            <useEnumCaseInsensitive>true</useEnumCaseInsensitive>
                            <useJakartaEe>true</useJakartaEe>
                            <useTags>true</useTags>
                        </configOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <enablePreview>true</enablePreview>
                        <proc>full</proc>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <!-- Allow dependabot to update this plugin by explicitly stating its version -->
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading --enable-preview</argLine>
                        <forkCount>1</forkCount>
                        <reuseForks>true</reuseForks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.tools</groupId>
                                <artifactId>chromeinspector-tool</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.sdk</groupId>
                                <artifactId>collections</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.shadowed</groupId>
                                <artifactId>icu4j</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.sdk</groupId>
                                <artifactId>jniutils</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.js-isolate</groupId>
                                <artifactId>js-language</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.shadowed</groupId>
                                <artifactId>json</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.sdk</groupId>
                                <artifactId>nativebridge</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.sdk</groupId>
                                <artifactId>nativeimage</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.polyglot</groupId>
                                <artifactId>polyglot</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.tools</groupId>
                                <artifactId>profiler-tool</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.regex</groupId>
                                <artifactId>regex</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.truffle</groupId>
                                <artifactId>truffle-api</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.truffle</groupId>
                                <artifactId>truffle-compiler</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.truffle</groupId>
                                <artifactId>truffle-enterprise</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.truffle</groupId>
                                <artifactId>truffle-runtime</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.graalvm.sdk</groupId>
                                <artifactId>word</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.victools</groupId>
                    <artifactId>jsonschema-maven-plugin</artifactId>
                    <version>4.33.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>execute-plugins-only-in-child-modules</id>
            <activation>
                <file>
                    <missing>.git</missing>
                </file>
            </activation>
            <dependencies>
                <dependency>
                    <!-- This is needed for lombok and mapstruct starting with lombok 1.18.16, see lombok changelog -->
                    <!-- It should be place *before* mapstruct in the dependencies list -->
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok-mapstruct-binding</artifactId>
                    <optional>true</optional>
                </dependency>
                <dependency>
                    <groupId>org.mapstruct</groupId>
                    <artifactId>mapstruct</artifactId>
                    <optional>true</optional>
                </dependency>
                <dependency>
                    <groupId>org.mapstruct</groupId>
                    <artifactId>mapstruct-processor</artifactId>
                    <optional>true</optional>
                </dependency>
                <dependency>
                    <!-- It's *absolutely crucial* to put lombok *behind* (!!!) mapstruct in the dependencies for builders to work -->
                    <!-- See https://stackoverflow.com/questions/55464438/mapstruct-with-mappingtarget-dont-call-lombok-builder-build -->
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                    <optional>true</optional>
                </dependency>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-configuration-processor</artifactId>
                    <optional>true</optional>
                </dependency>

                <dependency>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-collections4</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-lang3</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-actuator</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-validation</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-web</artifactId>
                </dependency>

                <dependency>
                    <groupId>io.micrometer</groupId>
                    <artifactId>micrometer-registry-prometheus</artifactId>
                    <scope>runtime</scope>
                </dependency>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-test</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <!-- this plugin *must* come after the openapi codegen for it to be executed after it within the respective life-cycle phase -->
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>add-source-gen</id>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <phase>generate-sources</phase>
                                <configuration>
                                    <sources>
                                        <source>${project.basedir}/src/gen/java</source>
                                    </sources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>add-test-source</id>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <phase>generate-sources</phase>
                                <configuration>
                                    <sources>
                                        <source>${project.basedir}/src/test/e2e</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                    </plugin>
                </plugins>
                <resources>
                    <!-- Needed to expand artifactId and version into logback-spring.xml file for the serviceContext to be populated correctly -->
                    <resource>
                        <!-- Needed to expand artifactId and version into logback-spring.xml file for the serviceContext to be populated correctly -->
                        <directory>src/main/resources</directory>
                        <filtering>true</filtering>
                    </resource>
                </resources>
                <testResources>
                    <testResource>
                        <!-- Needed to expand artifactId and version into logback-spring.xml file for the serviceContext to be populated correctly -->
                        <directory>src/test/resources</directory>
                        <filtering>true</filtering>
                    </testResource>
                </testResources>
            </build>
        </profile>
    </profiles>
</project>
